Fix image sizes and alignment in buttons

--- a/assets/css/components/_buttons.scss
+++ b/assets/css/components/_buttons.scss
@@ -45,9 +45,14 @@ button.btn {
 // Button > with image
 .btn img {
   display: inline-block;
-  max-height: $m-font-size-2 * $base-line-height;
+  height: $m-font-size-2 * $base-line-height;
   width: auto;
-  margin-right: $gutter;
+  // TODO: can add margin on left or right depending on placement
+  vertical-align: top;
+
+  @include respond-to(lrg) {
+    height: $font-size-2 * $base-line-height;
+  }
 }
 
 // Buttons > Block
